--- a/Man_Radu_Lab2/Man_Radu_Lab2.csproj
+++ b/Man_Radu_Lab2/Man_Radu_Lab2.csproj
@@ -13,12 +13,14 @@
     <None Remove="Pages\Books\" />
     <None Remove="Pages\Publishers\" />
     <None Remove="Pages\Authors\" />
+    <None Remove="Pages\Categories\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Pages\Books\" />
     <Folder Include="Pages\Publishers\" />
     <Folder Include="Pages\Authors\" />
+    <Folder Include="Pages\Categories\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.10" />
@@ -29,5 +31,11 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.13" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Pages\Index.cshtml.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Remove="Pages\Index.cshtml" />
   </ItemGroup>
 </Project>
